@@ -4,6 +4,8 @@ import edu.northwestern.bioinformatics.bering.TableDefinition;
 import edu.northwestern.bioinformatics.bering.Column;
 
 import java.util.Collections;
+import java.util.Map;
+import java.util.HashMap;
 
 /**
  * This test covers elements of the abstract {@link HibernateBasedDialect} class
@@ -34,6 +36,18 @@ public class HibernateBasedDialectTest extends DialectTestCase<PostgreSQL> {
                 Collections.<String, Object>singletonMap("references", "rooms"), "room_id", "integer")),
             "ALTER TABLE feasts ADD COLUMN room_id INT4",
             "ALTER TABLE feasts ADD CONSTRAINT fk_feasts_rooms FOREIGN KEY (room_id) REFERENCES rooms(id)"
+        );
+    }
+
+    public void testAddColumnWithFKAndExplicitConstraintName() throws Exception {
+        Map<String, Object> params = new HashMap<String, Object>();
+        params.put("references", "rooms");
+        params.put("referenceName", "fk_random");
+        assertStatements(
+            getDialect().addColumn("feasts",
+                Column.createColumn(params, "room_id", "integer")),
+            "ALTER TABLE feasts ADD COLUMN room_id INT4",
+            "ALTER TABLE feasts ADD CONSTRAINT fk_random FOREIGN KEY (room_id) REFERENCES rooms(id)"
         );
     }
 }
